--- a/R_INIA/Curso_INIA_P1.html
+++ b/R_INIA/Curso_INIA_P1.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Adrian Lopez Garcia" />
 
-<meta name="date" content="2019-10-12" />
+<meta name="date" content="2019-11-12" />
 
 <title>Squeezing R with awesome packages</title>
 
@@ -1518,7 +1518,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Squeezing R with awesome packages</h1>
 <h4 class="author">Adrian Lopez Garcia</h4>
-<h4 class="date">10/12/2019</h4>
+<h4 class="date">11/12/2019</h4>
 
 </div>
 
@@ -1710,11 +1710,16 @@ Show/Hide
 Show/Hide
 </button>
 <div id="base_rename" class="collapse">
-<pre class="r"><code>phenot2 &lt;- phenot
-old.cols &lt;- which(colnames(phenot2) %in% c(&quot;Weight..kg.&quot;, &quot;Weight.month&quot;, &quot;Loin.weight.1&quot;, &quot;Loin.weight.2&quot;))
-old.cols &lt;- 4:7
+<pre class="r"><code>oldnames &lt;- c(&quot;Weight..kg.&quot;, &quot;Weight.month&quot;, &quot;Loin.weight.1&quot;, &quot;Loin.weight.2&quot;)
+newnames &lt;- c(&quot;Weight_kg&quot;, &quot;Month&quot;, &quot;LoinW_1&quot;, &quot;LoinW_2&quot;)
 
+# Classic way:
+phenot2 &lt;- phenot
+old.cols &lt;- which(colnames(phenot2) %in% oldnames) # Same as: old.cols &lt;- 4:7
 colnames(phenot2)[old.cols] &lt;- c(&quot;Weight_kg&quot;, &quot;Month&quot;, &quot;LoinW_1&quot;, &quot;LoinW_2&quot;)
+
+# dplyr way:
+phenot2 &lt;- phenot %&gt;% rename_at(vars(oldnames), ~ newnames)
 
 head(phenot2)</code></pre>
 <pre><code>##   ID_sample Breed Diet Weight_kg Month LoinW_1 LoinW_2    WHC
@@ -1986,6 +1991,23 @@ phenot_sub</code></pre>
 ## 11 Sample 12    IB    2     130.3    2.04    1.96 0.24702 0.3366667
 ## 12  Sample 3    IB    1     133.2    2.29    2.36 0.20632 0.3644444</code></pre>
 <hr />
+<p>We can do all these steps together:</p>
+<pre class="r"><code>oldnames &lt;- c(&quot;Weight..kg.&quot;, &quot;Weight.month&quot;, &quot;Loin.weight.1&quot;, &quot;Loin.weight.2&quot;)
+newnames &lt;- c(&quot;Weight_kg&quot;, &quot;Month&quot;, &quot;LoinW_1&quot;, &quot;LoinW_2&quot;)
+
+adg &lt;- phenot %&gt;%
+  rename_at(vars(oldnames), ~ newnames) %&gt;%
+  group_by(ID_sample) %&gt;% 
+  summarise(ADG = diff(Weight_kg)/90)
+
+phenot_sub &lt;- phenot %&gt;% 
+  rename_at(vars(oldnames), ~ newnames) %&gt;%
+  mutate(WHC_dec = WHC/100) %&gt;%
+  select(ID_sample, Breed, Diet, Weight_kg, LoinW_1, LoinW_2, WHC_dec) %&gt;%
+  filter(!is.na(LoinW_1) &amp; !is.na(LoinW_2) &amp; !is.na(WHC_dec)) %&gt;%
+  full_join(adg, by = &quot;ID_sample&quot;) %&gt;%
+  arrange(Breed, Weight_kg)</code></pre>
+<hr />
 </div>
 </div>
 </div>
@@ -2227,7 +2249,7 @@ microb %&gt;% slice(str_which(Kingdom, &quot;Bacteria&quot;))</code></pre>
 ## [6,] &quot;MethanomethylophilSTUPID&quot; &quot;MethanomethylophilSTUPID_unclassified&quot;
 ## [7,] &quot;MethanobacteriSTUPID&quot;     &quot;Methanobrevibacter&quot;</code></pre>
 <blockquote>
-<p><strong>SOME TRAINING</strong> <br /> - Change row names of <code>phenot_sub</code> to be identical to sample names at <code>fpkm_sep</code> and <code>microb</code> datasets.</p>
+<p><strong>SOME TRAINING</strong> <br /> Change row names of <code>phenot_sub</code> to be identical to sample names at <code>fpkm_sep</code> and <code>microb</code> datasets.</p>
 </blockquote>
 <button class="btn btn-primary" data-toggle="collapse" data-target="#change_rownames">
 Show/Hide
